--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="flex-1 flex flex-col items-center justify-center text-center md:items-start md:text-left">
                 <h1 class="text-4xl sm:text-5xl font-extrabold text-red-700 mb-4 tracking-tight break-words leading-tight hero-title"
                     data-i18n="heroTitle">
-                    Donate Blood Save Life
+                    Donate Blood, Save Lives
                 </h1>
                 <p class="mb-8 text-lg text-gray-700 max-w-xl mx-auto md:mx-0" data-i18n="heroDescription">Be a hero in
                     your community. Register as
