--- a/profile.html
+++ b/profile.html
@@ -228,6 +228,10 @@
                             <i class="fa-solid fa-certificate"></i>
                             <span data-i18n="profileGenCert">Generate Certificate</span>
                         </button>
+                        <button id="pf-donor-card" type="button" class="pf-btn pf-btn--teal">
+                            <i class="fa-solid fa-id-card"></i>
+                            <span>Donor Card</span>
+                        </button>
                     </div>
                 </form>
             </div>
