Life is Beautiful💜

--- a/index.html
+++ b/index.html
@@ -722,11 +722,11 @@
                     <p data-i18n="footerBrandDesc">A passionate, volunteer-driven organization dedicated to saving lives through the power of blood
                         donation. We connect donors with patients in urgent need.</p>
                     <div class="footer-socials mt-2">
-                        <a href="https://github.com/MueidShahriar" class="social-github" aria-label="GitHub"
+                        <a href="https://www.facebook.com/share/1CLTZN8DmU/?mibextid=wwXIfr" class="social-facebook" aria-label="Facebook"
                             target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-github"></i>
+                            <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/mueid16" class="social-linkedin" aria-label="LinkedIn"
+                        <a href="https://www.linkedin.com/company/bauet-blood-donation-club/" class="social-linkedin" aria-label="LinkedIn"
                             target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
